[gd_scene load_steps=3 format=2]

[ext_resource path="res://translation_demo/language_selector.gd" type="Script" id=1]
[ext_resource path="res://translation_demo/demo.gd" type="Script" id=2]

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="ContentContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Toolbar" type="HBoxContainer" parent="ContentContainer/MainContainer"]
margin_right = 1010.0
margin_bottom = 20.0
size_flags_vertical = 0

[node name="Label" type="Label" parent="ContentContainer/MainContainer/Toolbar"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Language:"

[node name="LanguageSelector" type="OptionButton" parent="ContentContainer/MainContainer/Toolbar"]
margin_left = 67.0
margin_right = 141.0
margin_bottom = 20.0
text = "English"
items = [ "English", null, false, 0, null, "French", null, false, 1, null ]
selected = 0
script = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="ContentContainer/MainContainer"]
margin_top = 24.0
margin_right = 1010.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="ContentContainer/MainContainer"]
margin_top = 32.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemBrowser" type="VBoxContainer" parent="ContentContainer/MainContainer/HBoxContainer"]
margin_right = 225.0
margin_bottom = 554.0
rect_min_size = Vector2( 225, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="LivingRock" type="Button" parent="ContentContainer/MainContainer/HBoxContainer/ItemBrowser"]
margin_right = 225.0
margin_bottom = 20.0
text = "KEY_LIVING_ROCK_NAME"

[node name="RustyKey" type="Button" parent="ContentContainer/MainContainer/HBoxContainer/ItemBrowser"]
margin_top = 24.0
margin_right = 225.0
margin_bottom = 44.0
text = "KEY_RUSTY_KEY_NAME"

[node name="Ax" type="Button" parent="ContentContainer/MainContainer/HBoxContainer/ItemBrowser"]
margin_top = 48.0
margin_right = 225.0
margin_bottom = 68.0
text = "KEY_AX_NAME"

[node name="HSeparator" type="HSeparator" parent="ContentContainer/MainContainer/HBoxContainer/ItemBrowser"]
margin_top = 72.0
margin_right = 225.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="ContentContainer/MainContainer/HBoxContainer/ItemBrowser"]
margin_top = 80.0
margin_right = 225.0
margin_bottom = 94.0
text = "KEY_WELCOME_MESSAGE"
autowrap = true

[node name="VSeparator" type="VSeparator" parent="ContentContainer/MainContainer/HBoxContainer"]
margin_left = 229.0
margin_right = 233.0
margin_bottom = 554.0

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/MainContainer/HBoxContainer"]
margin_left = 237.0
margin_right = 1010.0
margin_bottom = 554.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ContentContainer/MainContainer/HBoxContainer/VBoxContainer"]
margin_right = 773.0
margin_bottom = 14.0

[connection signal="item_selected" from="ContentContainer/MainContainer/Toolbar/LanguageSelector" to="ContentContainer/MainContainer/Toolbar/LanguageSelector" method="_on_LanguageSelector_item_selected"]
[connection signal="language_selected" from="ContentContainer/MainContainer/Toolbar/LanguageSelector" to="." method="_on_LanguageSelector_language_selected"]
[connection signal="pressed" from="ContentContainer/MainContainer/HBoxContainer/ItemBrowser/LivingRock" to="." method="_on_LivingRock_pressed"]
[connection signal="pressed" from="ContentContainer/MainContainer/HBoxContainer/ItemBrowser/RustyKey" to="." method="_on_RustyKey_pressed"]
[connection signal="pressed" from="ContentContainer/MainContainer/HBoxContainer/ItemBrowser/Ax" to="." method="_on_Ax_pressed"]
